fixed about icons posiiton on mobile

--- a/src/scss/blocks/about.scss
+++ b/src/scss/blocks/about.scss
@@ -194,6 +194,11 @@
       line-height: 7.3vw;
       display: block;
     }
+
+    &__links {
+      justify-content: center;
+    }
+
     &__link {
       margin-right: 11.87vw;
     }
